fix: run FFmpeg with ProcessBuilder